# oss_demo

repo1/: pyproject.toml  requirements.txt
repo1/repo1/: repo1.py
repo1/src/: project1.py
repo2/: pyproject.toml  requirements.txt
repo2/repo2/: repo2.py
repo2/src/: repo2.py
repo3/: pyproject.toml
repo3/src/: repo3.py
